updated calldetails, customers, header and styles.

--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -2,8 +2,8 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="customers.html">Customers</a></li>
-        <li><a href="plan.html">Plan</a></li>
-        <li><a href="friends-family.html">Friends/Family</a></li>
+        <li><a href="plans.html">Plan</a></li>
+        <li><a href="friendorfamily.html">Friends/Family</a></li>
         <li><a href="calldetails.html">Call Details</a></li>
     </ul>
 </nav>
