--- a/src/main/resources/static/calldetails.html
+++ b/src/main/resources/static/calldetails.html
@@ -17,7 +17,10 @@
         margin: 20px;
         font-size: large;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
 
+        .button:hover {
+            background-color: rgb(210, 111, 111);
         }
         body{
             background-color: rgb(236, 219, 198);
@@ -25,6 +28,7 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: brown;
             font-weight: 160;
+            
         }
         
         table , tr , td ,th  {
