adding css to the remaining classes

--- a/src/main/resources/static/calldetails.html
+++ b/src/main/resources/static/calldetails.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Call Details</title>
     <link rel="stylesheet" href="./css/styles.css">
-
+    <title>Tailwind CSS Example</title>
+ 
     <style>
         header{
             background-color: brown;
@@ -17,6 +18,7 @@
         margin: 20px;
         font-size: large;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        border: 2px solid rgb(101, 19, 19);
         }
 
         .button:hover {
@@ -32,7 +34,7 @@
         }
         
         table , tr , td ,th  {
-            border: solid 3px black;
+            border: solid 3px rgba(71, 7, 7, 0.758);
         }
         
     </style>
@@ -49,7 +51,7 @@
         <a href="#" class="button" onclick="showByCallerId()">Show by Caller ID</a>
         <a href="#" class="button" onclick="showByReceiverId()">Show by Receiver ID</a>
 
-        <div class="info">
+        <div>
             Get all Calldetails by Call Id , Caller Id or Reciever Id. 
         </div>
 
