--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,11 +24,10 @@
         <section class="technologies">
             <h2>Technologies Used</h2>
             <div class="tech-slider">
-                <div class="tech-card"><h3>Technology 1 </h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p></div>
-                <div class="tech-card"><h3>Technology 2 </h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p></div>
-                <div class="tech-card"><h3>Technology 3 </h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p></div>
-                <div class="tech-card"><h3>Technology 4 </h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p></div>
-                <div class="tech-card"><h3>Technology 5 </h3><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p></div>
+                <div class="tech-card"><h3>Backend </h3><p>The application is built using Spring Boot and Java , We have used JPA (Java Persistence API) and Hibernate with Spring Boot. </p></div>
+                <div class="tech-card"><h3>Database</h3><p>The data is stored in a PostgreSQL database (cloud- supabase) </p></div>
+                <div class="tech-card"><h3>UI </h3><p>the Frontend was done using Html , css, JavaScript. </p></div>
+                <div class="tech-card"><h3>API Testing</h3><p>we tested using Postman and Sawgger ensuring the reliability and functionality of the tms , we also use j unit test cases to see the coverage percent </p></div>
             </div>
         </section>
 
